# datateknik_final

./: CMakeLists.txt
main/: CMakeLists.txt  main.c
